--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -218,8 +218,8 @@ body {
 
 .sidebar {
   position: absolute;
-  top: 30%;
-  left: 20px;
+  top: 225px;
+  left: 10px;
   width: 17.3333333333%; }
   .sidebar h4 {
     margin: 0; }
