--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -60,7 +60,15 @@ body{
 	height: 100%;
 }
 
-
+.full-width{
+	width: 100%;
+	max-width: 100%;
+	display: block;
+	overflow-x:hidden;
+	img{
+		max-width: 100%;
+	}
+}
 
 .list-wrapper{
 	position: relative;
