--- a/partials/detail.html
+++ b/partials/detail.html
@@ -1,5 +1,5 @@
 
-<div class="full-width"><img src="ymo.jpg"/></div>
+<div send-height="send-height" class="full-width"><img src="ymo.jpg"/></div>
 <div id="top" du-scroll-container="du-scroll-container" class="list-wrapper">
   <div class="rbma-radio-picks"></div>
   <h1 class="author">{{list.fields.author}}</h1>
