--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -60,21 +60,15 @@ body{
 	height: 100%;
 }
 
-.full-width{
-	width: 100%;
-	max-width: 100%;
-	display: block;
-	overflow-x:hidden;
-	img{
-		max-width: 100%;
-	}
-}
-
-.list-wrapper{
+.frame-wrapper{
 	position: relative;
 	display: block;
 	overflow-x: hidden;
 	overflow-y: scroll;
+}
+.list-wrapper{
+	position: relative;
+	display: block;
 	margin: 0;
 	padding-top: 58px;
 	@include vendorize(transition, opacity 0.3s);
