--- a/partials/detail.html
+++ b/partials/detail.html
@@ -1,33 +1,35 @@
 
-<div id="top" du-scroll-container="du-scroll-container" class="list-wrapper">
-  <div class="rbma-radio-picks"></div>
-  <h1 class="author">{{list.fields.author}}</h1>
-  <ul class="list-thumbs">
-    <li ng-repeat="entry in list.fields.individualListItems">
-      <div class="thumb-container"><a href="#{{entry.fields.anchorLinkTag}}" du-smooth-scroll="du-smooth-scroll">
-          <div class="img-container"><span class="order">{{entry.fields.order}}</span><img ng-src="{{entry.fields.image.fields.file.url}}"/></div></a></div>
-    </li>
-  </ul>
-  <p ng-bind-html="trust(list.entry[0].fields.body)" class="intro"></p>
-  <ul class="list-items">
-    <li ng-repeat="item in list.fields.individualListItems" class="list-item"><a id="{{item.fields.anchorLinkTag}}"></a>
-      <div class="list-container">
-        <div class="list-titles"><span flag="flag" data-order="{{item.fields.order}}" class="item-order">{{item.fields.order}}</span>
-          <h3 class="item-title">{{item.fields.title}}</h3>
+<div class="frame-wrapper">
+  <div du-scroll-container="du-scroll-container" class="list-wrapper">
+    <div class="rbma-radio-picks"></div>
+    <h1 class="author">{{list.fields.author}}</h1>
+    <ul class="list-thumbs">
+      <li ng-repeat="entry in list.fields.individualListItems">
+        <div class="thumb-container"><a href="#{{entry.fields.anchorLinkTag}}" du-smooth-scroll="du-smooth-scroll">
+            <div class="img-container"><span class="order">{{entry.fields.order}}</span><img ng-src="{{entry.fields.image.fields.file.url}}"/></div></a></div>
+      </li>
+    </ul>
+    <p ng-bind-html="trust(list.entry[0].fields.body)" class="intro"></p>
+    <ul class="list-items">
+      <li ng-repeat="item in list.fields.individualListItems" class="list-item"><a id="{{item.fields.anchorLinkTag}}"></a>
+        <div class="list-container">
+          <div class="list-titles"><span flag="flag" data-order="{{item.fields.order}}" class="item-order">{{item.fields.order}}</span>
+            <h3 class="item-title">{{item.fields.title}}</h3>
+          </div>
+          <div class="item-body">
+            <div ng-show="{{item.fields.embedAsImage}}" class="item-image-wrapper"><img ng-src="{{item.fields.image.fields.file.url}}"/></div>
+            <p ng-bind-html="trust(item.fields.body)"></p>
+          </div>
         </div>
-        <div class="item-body">
-          <div ng-show="{{item.fields.embedAsImage}}" class="item-image-wrapper"><img ng-src="{{item.fields.image.fields.file.url}}"/></div>
-          <p ng-bind-html="trust(item.fields.body)"></p>
-        </div>
-      </div>
-    </li>
-  </ul>
-  <div sticky="sticky" class="sidebar"><a ng-click="smoothScroll('top')"><img ng-src="{{list.fields.authorImage.fields.file.url}}"/>
-      <h4 class="radio-picks-sidebar"></h4>
-      <h4 class="author-sidebar">{{list.fields.author}}</h4></a>
-    <ul class="sidebar-list"><a ng-repeat="item in list.fields.individualListItems" href="#{{item.fields.anchorLinkTag}}" du-smooth-scroll="du-smooth-scroll" class="{{item.fields.anchorLinkTag}}">
-        <li data-order="{{item.fields.order}}" class="sidebar-item">
-          <div class="order">{{item.fields.order}}</div>{{item.fields.title}}
-        </li></a></ul>
+      </li>
+    </ul>
+    <div sticky="sticky" class="sidebar"><a ng-click="smoothScroll('top')"><img ng-src="{{list.fields.authorImage.fields.file.url}}"/>
+        <h4 class="radio-picks-sidebar"></h4>
+        <h4 class="author-sidebar">{{list.fields.author}}</h4></a>
+      <ul class="sidebar-list"><a ng-repeat="item in list.fields.individualListItems" href="#{{item.fields.anchorLinkTag}}" du-smooth-scroll="du-smooth-scroll" class="{{item.fields.anchorLinkTag}}">
+          <li data-order="{{item.fields.order}}" class="sidebar-item">
+            <div class="order">{{item.fields.order}}</div>{{item.fields.title}}
+          </li></a></ul>
+    </div>
   </div>
 </div>
