--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -54,15 +54,22 @@ body {
             max-width: 100%;
             height: auto; }
 
-.frame-wrapper {
-  position: relative;
+.ng-scope {
+  height: 100%; }
+
+.full-width {
+  width: 100%;
+  max-width: 100%;
   display: block;
-  overflow-x: hidden;
-  overflow-y: scroll; }
+  overflow-x: hidden; }
+  .full-width img {
+    max-width: 100%; }
 
 .list-wrapper {
   position: relative;
   display: block;
+  overflow-x: hidden;
+  overflow-y: scroll;
   margin: 0;
   padding-top: 58px;
   -webkit-transition: opacity 0.3s;
