--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -71,6 +71,7 @@ body {
   overflow-x: hidden;
   overflow-y: scroll;
   margin: 0;
+  height: 8888px;
   padding-top: 58px;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
