--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -76,6 +76,7 @@ body{
 	overflow-x: hidden;
 	overflow-y: scroll;
 	margin: 0;
+	height: 8888px;
 	padding-top: 58px;
 	@include vendorize(transition, opacity 0.3s);
 	.rbma-radio-picks{
