--- a/partials/detail.html
+++ b/partials/detail.html
@@ -1,5 +1,5 @@
 
-<div id="top" du-scroll-container="du-scroll-container" class="list-wrapper">
+<div id="top" du-scroll-container="du-scroll-container" send-height="send-height" class="list-wrapper">
   <div class="rbma-radio-picks"></div>
   <h1 class="author">{{list.fields.author}}</h1>
   <ul class="list-thumbs">
