--- a/partials/detail.jade
+++ b/partials/detail.jade
@@ -1,4 +1,4 @@
-.list-wrapper(id="top" du-scroll-container)
+.list-wrapper(id="top" du-scroll-container send-height)
 	.rbma-radio-picks
 	h1(class="author") {{list.fields.author}}
 	//- img(ng-src="{{list.includes.Asset[0].fields.file.url}}")
