--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -68,6 +68,8 @@ body {
 .list-wrapper {
   position: relative;
   display: block;
+  overflow-x: hidden;
+  overflow-y: scroll;
   margin: 0;
   height: 8888px;
   padding-top: 58px;
