--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -54,13 +54,21 @@ body {
             max-width: 100%;
             height: auto; }
 
+.frame {
+  width: 100%;
+  height: 800px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  position: absolute;
+  top: 0;
+  left: 0; }
+
 .list-wrapper {
   position: relative;
   display: block;
-  overflow-x: hidden;
-  overflow-y: scroll;
   margin: 0;
   padding-top: 58px;
+  min-height: 100%;
   -webkit-transition: opacity 0.3s;
   -moz-transition: opacity 0.3s;
   -ms-transition: opacity 0.3s;
