--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -56,14 +56,23 @@ body{
 	}
 }
 
+.frame{
+	width: 100%;
+	height: 800px;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
 
 .list-wrapper{
 	position: relative;
 	display: block;
-	overflow-x: hidden;
-	overflow-y: scroll;
 	margin: 0;
 	padding-top: 58px;
+	min-height: 100%;
 	@include vendorize(transition, opacity 0.3s);
 	.rbma-radio-picks{
 		font-size: 2em;
