--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -56,7 +56,7 @@ body {
 
 .frame {
   width: 100%;
-  height: 800px;
+  min-height: 700px;
   overflow-x: hidden;
   overflow-y: scroll;
   position: absolute;
