--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -169,7 +169,8 @@ body {
     font-size: 1.7em;
     line-height: 1.5;
     list-style-type: none;
-    padding: 0; }
+    padding: 0;
+    margin-bottom: 48px; }
     .list-wrapper .list-items .list-item {
       padding: 0; }
       .list-wrapper .list-items .list-item .list-container {
