--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -166,6 +166,7 @@ body{
 		line-height: 1.5;
 		list-style-type: none;
 		padding: 0;
+		margin-bottom: 48px;
 		.list-item{
 			padding: 0;
 			.list-container{
