--- a/partials/detail.html
+++ b/partials/detail.html
@@ -11,9 +11,9 @@
     </ul>
     <p ng-bind-html="trust(list.entry[0].fields.body)" class="intro"></p>
     <ul class="list-items">
-      <li ng-repeat="item in list.fields.individualListItems" class="list-item"><a id="{{item.fields.anchorLinkTag}}"></a>
+      <li flag="flag" ng-repeat="item in list.fields.individualListItems" class="list-item">
         <div class="list-container">
-          <div class="list-titles"><span flag="flag" data-order="{{item.fields.order}}" class="item-order">{{item.fields.order}}</span>
+          <div class="list-titles"><a id="{{item.fields.anchorLinkTag}}" data-order="{{item.fields.order}}" class="item-order"></a><span>{{item.fields.order}}</span>
             <h3 class="item-title">{{item.fields.title}}</h3>
           </div>
           <div class="item-body">
