--- a/index.jade
+++ b/index.jade
@@ -3,6 +3,7 @@ html(lang="en", ng-app="listfeature")
 	head
 		meta(charset="utf-8")
 		title RBMA Radio Picks
+		link(rel="stylesheet", type="text/css", href="bower_components/ngprogress/ngProgress.css")
 		link(rel="stylesheet", type="text/css", href="css/feature-beast.css")
 
 	body(class="frame-body")
@@ -19,6 +20,7 @@ html(lang="en", ng-app="listfeature")
 		script(type="text/javascript", src="bower_components/ng-contentful/ng-contentful.js")
 		script(type="text/javascript", src="bower_components/angular-mocks/angular-mocks.js")
 		script(type="text/javascript", src="bower_components/angular-scroll/angular-scroll.min.js")
+		script(type="text/javascript", src="bower_components/ngprogress/build/ngProgress.min.js")
 		script(type="text/javascript", src="js/showdown.js")
 		script(type="text/javascript", src="js/waypoints.min.js")
 		script(type="text/javascript", src="js/app.js")
