--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -66,6 +66,18 @@ body{
 	left: 0;
 }
 
+#spinner{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	min-height: 800px;
+	background-color: black;
+	color: white;
+	z-index: 9999999999999;
+}
+
 
 .list-wrapper{
 	position: absolute;
@@ -113,7 +125,7 @@ body{
 
 				.img-container{
 					border: 5px solid black;
-					overflow: hidden;
+					overflow: hidden !important;
 					width: 150px;
 					height: 150px;
 					text-align: center;
@@ -138,6 +150,8 @@ body{
 					}
 					img{
 						height: 100%;
+						width: 100%;
+						max-width: 100%;
 						width: auto;
 					}
 					&:hover{
