remove loading text

--- a/partials/detail.html
+++ b/partials/detail.html
@@ -1,7 +1,5 @@
 
-<div id="spinner">
-  <h1>Loading</h1>
-</div>
+<div id="spinner"></div>
 <div du-scroll-container="du-scroll-container" class="frame">
   <div id="top" send-height="send-height" class="list-wrapper">
     <div class="rbma-radio-picks"></div>
