--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -135,7 +135,7 @@ body {
           -o-transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
           transition: all 0.2s cubic-bezier(0.17, 0.67, 0.83, 0.67);
           z-index: 5; }
-          .list-wrapper .list-thumbs li .thumb-container .img-container span {
+          .list-wrapper .list-thumbs li .thumb-container .img-container span.order {
             z-index: 9999999999999;
             position: absolute;
             text-align: center;
@@ -147,12 +147,13 @@ body {
             border-radius: 50%;
             top: 10px;
             right: 10px;
-            font-size: 0.5em;
+            font-size: 0.75em;
             font-weight: bold;
             border: 2px solid black;
             width: 15px;
             height: 15px;
-            line-height: 15px; }
+            line-height: 15px;
+            color: black !important; }
           .list-wrapper .list-thumbs li .thumb-container .img-container img {
             height: 100%;
             width: 100%;
@@ -171,9 +172,12 @@ body {
             transform: scale(2); }
         .list-wrapper .list-thumbs li .thumb-container:hover {
           z-index: 999; }
+  .list-wrapper .author-hero-image {
+    display: none; }
   .list-wrapper .intro {
     width: 66.6666666666%;
-    margin-left: 33.33333333333%;
+    margin-left: 20%;
+    margin-top: 88px;
     font-size: 1.7em;
     line-height: 1.5; }
   .list-wrapper .list-items {
@@ -270,6 +274,7 @@ body {
           width: 15px;
           display: inline-block;
           margin-right: 5px;
+          font-size: 0.75em;
           text-align: center;
           line-height: 15px;
           height: 15px;
@@ -295,6 +300,69 @@ body {
     position: fixed;
     top: 20px; }
 
+@media screen and (max-width: 1024px) {
+  .list-wrapper {
+    width: 90%;
+    margin-left: 5%; }
+    .list-wrapper .rbma-radio-picks {
+      font-size: 2em;
+      border-bottom: 5px solid black;
+      width: 100%;
+      margin-left: 0; }
+      .list-wrapper .rbma-radio-picks:after {
+        content: 'RBMA Radio Picks'; }
+    .list-wrapper .author {
+      font-size: 4em;
+      margin: 0;
+      margin-left: 0; }
+    .list-wrapper .author-hero-image {
+      width: 80%;
+      height: auto;
+      margin-left: 10%;
+      margin-top: 10px;
+      display: block; }
+    .list-wrapper .intro {
+      width: 100%;
+      margin-left: 0;
+      margin-top: 10px;
+      font-size: 1.7em;
+      line-height: 1.5; }
+    .list-wrapper ul.list-items {
+      width: 100%;
+      margin-left: 0; }
+      .list-wrapper ul.list-items .list-item .list-container .item-body .item-image-wrapper {
+        max-width: 98%;
+        margin-left: 1%;
+        border: none; }
+        .list-wrapper ul.list-items .list-item .list-container .item-body .item-image-wrapper img {
+          height: contain; }
+      .list-wrapper ul.list-items .list-item .list-container .item-body p {
+        font-size: 0.8em; }
+        .list-wrapper ul.list-items .list-item .list-container .item-body p .video {
+          position: relative;
+          padding-bottom: 56.25%;
+          padding-top: 30px;
+          width: 80%;
+          margin-left: 10%;
+          height: 0;
+          overflow: hidden;
+          margin-bottom: 50px; }
+          .list-wrapper ul.list-items .list-item .list-container .item-body p .video iframe, .list-wrapper ul.list-items .list-item .list-container .item-body p .video object, .list-wrapper ul.list-items .list-item .list-container .item-body p .video embed {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%; }
+
+  .sidebar {
+    display: none; }
+
+  .list-thumbs {
+    display: none; }
+
+  .intro {
+    width: 100%;
+    margin-left: 0; } }
 @media screen and (max-width: 600px) {
   .list-wrapper {
     width: 90%;
