--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -133,7 +133,7 @@ body{
 					@include vendorize(transform, rotate(-45deg));
 					@include vendorize(transition, all .2s cubic-bezier(.17,.67,.83,.67));
 					z-index: 5;
-					span{
+					span.order{
 						z-index: 9999999999999;
 						position: absolute;
 						text-align: center;
@@ -141,12 +141,13 @@ body{
 						@include vendorize(border-radius, 50%);
 						top: 10px;
 						right: 10px;
-						font-size: 0.5em;
+						font-size: 0.75em;
 						font-weight: bold;
 						border: 2px solid black;
 						width: 15px;
 						height: 15px;
 						line-height: 15px;
+						color: black !important;
 					}
 					img{
 						height: 100%;
@@ -166,9 +167,14 @@ body{
 		}
 	}
 
+	.author-hero-image{
+		display: none;
+	}
+
 	.intro{
 		width: 66.6666666666%;
-		margin-left: 33.33333333333%;
+		margin-left: 20%;
+		margin-top: 88px;
 		font-size: 1.7em;
 		line-height: 1.5;
 	}
@@ -283,6 +289,7 @@ body{
 						width: 15px;
 						display: inline-block;
 						margin-right: 5px;
+						font-size: 0.75em;
 						text-align: center;
 						line-height: 15px;
 						height: 15px;
@@ -314,6 +321,101 @@ body{
 			top: 20px;
 		}
 	}
+
+
+@media screen and (max-width: 1024px){
+
+	.list-wrapper{
+		width: 90%;
+		margin-left: 5%;
+		.rbma-radio-picks{
+			font-size: 2em;
+			border-bottom: 5px solid black;
+			width: 100%;
+			margin-left: 0;
+			&:after{
+				content: 'RBMA Radio Picks';
+			}
+		}
+		.author{
+			font-size: 4em;
+			margin: 0;
+			margin-left: 0;
+		}
+		
+		.author-hero-image{
+			width: 80%;
+			height: auto;
+			margin-left: 10%;
+			margin-top:10px;
+			display: block;
+		}
+		.intro{
+			width: 100%;
+			margin-left: 0;
+			margin-top: 10px;
+			font-size: 1.7em;
+			line-height: 1.5;
+		}
+		ul.list-items{
+			width: 100%;
+			margin-left: 0;
+			.list-item{
+				.list-container{
+					.item-titles{
+
+					}
+					.item-body{
+						.item-image-wrapper{
+							max-width: 98%;
+							margin-left: 1%;
+							border: none;
+							img{
+								height: contain;
+							}
+						}
+						p{
+							font-size: 0.8em;
+							.video{
+								position: relative;
+								padding-bottom: 56.25%;
+								padding-top: 30px;
+								width: 80%;
+								margin-left: 10%;
+								height: 0;
+								overflow: hidden;
+								margin-bottom: 50px;
+								iframe, object, embed{
+									position: absolute;
+									top: 0;
+									left: 0;
+									width: 100%;
+									height: 100%;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	.sidebar{
+		display: none;
+	}
+
+	.list-thumbs{
+		display: none;
+	}
+
+	.intro{
+		width: 100%;
+		margin-left: 0;
+	}
+
+	
+}
+
+
 
 @media screen and (max-width: 600px){
 
