--- a/partials/detail.html
+++ b/partials/detail.html
@@ -9,8 +9,8 @@
         <div class="thumb-container"><a href="#{{entry.fields.anchorLinkTag}}" du-smooth-scroll="du-smooth-scroll">
             <div class="img-container"><span class="order">{{entry.fields.order}}</span><img ng-src="{{entry.fields.image.fields.file.url}}"/></div></a></div>
       </li>
-    </ul>
-    <p ng-bind-html="trust(list.entry[0].fields.body)" class="intro"></p>
+    </ul><img ng-src="{{list.fields.authorImage.fields.file.url}}" class="author-hero-image"/>
+    <p ng-bind-html="trust(list.fields.body)" class="intro"></p>
     <ul class="list-items">
       <li ng-repeat="item in list.fields.individualListItems" class="list-item">
         <div class="list-container">
