--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -56,7 +56,7 @@ body {
 
 .frame {
   width: 100%;
-  min-height: 900px;
+  height: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
   position: fixed;
