remove send height

--- a/partials/detail.html
+++ b/partials/detail.html
@@ -1,7 +1,7 @@
 
 <div id="spinner"></div>
 <div du-scroll-container="du-scroll-container" class="frame">
-  <div id="top" send-height="send-height" class="list-wrapper">
+  <div id="top" class="list-wrapper">
     <div class="rbma-radio-picks"></div>
     <h1 class="author">{{list.fields.author}}</h1>
     <ul class="list-thumbs">
