send height back

--- a/partials/detail.jade
+++ b/partials/detail.jade
@@ -1,7 +1,7 @@
 div(id="spinner")
 
 .frame(du-scroll-container)
-	.list-wrapper(id="top")
+	.list-wrapper(id="top" send-height)
 		.rbma-radio-picks
 		h1(class="author") {{list.fields.author}}
 		//- img(ng-src="{{list.includes.Asset[0].fields.file.url}}")
