--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -56,8 +56,7 @@ body{
 
 .frame{
 	width: 100%;
-	// min-height: 900px;
-	height: 100%;
+	min-height: 900px;
 	overflow-x: hidden;
 	overflow-y: scroll;
 	position: fixed;
