decrease font mobile

--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -326,7 +326,8 @@ body {
       margin-left: 0;
       margin-top: 10px;
       font-size: 1.7em;
-      line-height: 1.5; }
+      line-height: 1.5;
+      font-size: 0.8em; }
     .list-wrapper ul.list-items {
       width: 100%;
       margin-left: 0; }
