--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -354,6 +354,7 @@ body{
 			margin-top: 10px;
 			font-size: 1.7em;
 			line-height: 1.5;
+			font-size: 0.8em;
 		}
 		ul.list-items{
 			width: 100%;
