--- a/partials/detail.html
+++ b/partials/detail.html
@@ -32,8 +32,8 @@
             <div class="order">{{item.fields.order}}</div>{{item.fields.title}}
           </li></a></ul>
       <div class="button-group">
-        <div class="button"><a href="https://twitter.com/share?url={{feature.fields.rbmaUrl}}&amp;via=rbma&amp;text={{feature.fields.title}}" target="blank"><i class="fa fa-twitter"></i></a></div>
-        <div class="button"><a href="https://www.facebook.com/sharer/sharer.php?u={{feature.fields.rbma_url}}" target="blank"><i class="fa fa-facebook"></i></a></div>
+        <div class="button"><a href="https://twitter.com/share?url={{feature.fields.rbmaUrl}}&amp;via=rbma&amp;text={{list.fields.title}}" target="blank"><i class="fa fa-twitter"></i></a></div>
+        <div class="button"><a href="https://www.facebook.com/sharer/sharer.php?u={{list.fields.rbma_url}}" target="blank"><i class="fa fa-facebook"></i></a></div>
       </div>
     </div>
   </div>
