--- a/partials/detail.jade
+++ b/partials/detail.jade
@@ -64,7 +64,7 @@ div(id="spinner")
 
 		.sidebar(sticky)
 			
-			a(ng-click="smoothScroll('top')")
+			a(href="#top", du-smooth-scroll, class="topscroll")
 				
 				img(ng-src="{{list.fields.authorImage.fields.file.url}}")
 				
