--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -231,6 +231,9 @@ body {
   left: 10px;
   width: 17.3333333333%;
   text-align: left; }
+  .sidebar a.topscroll {
+    text-decoration: none;
+    color: black; }
   .sidebar h4 {
     margin: 0; }
   .sidebar img {
