--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -257,6 +257,10 @@ body{
 		left: 10px;
 		width: 17.3333333333%;
 		text-align: left;
+		a.topscroll{
+			text-decoration: none;
+			color: black;
+		}
 		h4{
 			margin: 0;
 		}
