--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -30,6 +30,7 @@ body {
   height: 100%;
   min-width: 320px;
   min-height: 100%;
+  color: blue;
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: transparent;
   -webkit-overflow-scrolling: touch; }
@@ -88,7 +89,7 @@ body {
   transition: opacity 0.3s; }
   .list-wrapper .rbma-radio-picks {
     font-size: 2em;
-    border-bottom: 5px solid black;
+    border-bottom: 5px solid blue;
     width: 100%;
     margin-left: 10%; }
     .list-wrapper .rbma-radio-picks:after {
@@ -117,7 +118,7 @@ body {
         height: 225px;
         z-index: 1; }
         .list-wrapper .list-thumbs li .thumb-container .img-container {
-          border: 5px solid black;
+          border: 5px solid blue;
           overflow: hidden !important;
           width: 150px;
           height: 150px;
@@ -140,11 +141,11 @@ body {
             right: 10px;
             font-size: 0.75em;
             font-weight: bold;
-            border: 2px solid black;
+            border: 2px solid blue;
             width: 15px;
             height: 15px;
             line-height: 15px;
-            color: black !important; }
+            color: blue !important; }
           .list-wrapper .list-thumbs li .thumb-container .img-container img {
             height: 100%;
             width: 100%;
@@ -182,16 +183,16 @@ body {
         height: auto;
         width: 100%; }
         .list-wrapper .list-items .list-item .list-container .list-titles {
-          border-bottom: 5px solid black;
+          border-bottom: 5px solid blue;
           margin: 0; }
           .list-wrapper .list-items .list-item .list-container .list-titles .item-order {
-            font-size: 0.7em;
+            font-size: 0.5em;
             display: inline-block;
             text-align: center;
             width: 20px;
             line-height: 20px;
             height: 20px;
-            border: 2px solid black;
+            border: 2px solid blue;
             -o-border-radius: 50%;
             border-radius: 50%; }
           .list-wrapper .list-items .list-item .list-container .list-titles .item-title {
@@ -229,11 +230,11 @@ body {
   position: absolute;
   top: 250px;
   left: 10px;
-  width: 17.3333333333%;
+  width: 17.0000003333%;
   text-align: left; }
   .sidebar a.topscroll {
     text-decoration: none;
-    color: black; }
+    color: blue; }
   .sidebar h4 {
     margin: 0; }
   .sidebar img {
@@ -259,7 +260,7 @@ body {
         padding: 5px;
         margin: 0;
         background-color: transparent;
-        color: black !important; }
+        color: blue !important; }
         .sidebar .sidebar-list a .sidebar-item .order {
           width: 15px;
           display: inline-block;
@@ -268,21 +269,16 @@ body {
           text-align: center;
           line-height: 15px;
           height: 15px;
-          border: 2px solid black;
+          border: 2px solid blue;
           -o-border-radius: 50%;
           border-radius: 50%; }
-        .sidebar .sidebar-list a .sidebar-item:hover {
-          background-color: black;
+        .sidebar .sidebar-list a .sidebar-item:hover, .sidebar .sidebar-list a .sidebar-item.active {
+          background-color: blue;
           color: white !important; }
-          .sidebar .sidebar-list a .sidebar-item:hover .order {
-            border: 2px solid white !important; }
-        .sidebar .sidebar-list a .sidebar-item.active {
-          background-color: black;
-          color: white !important; }
-          .sidebar .sidebar-list a .sidebar-item.active .order {
+          .sidebar .sidebar-list a .sidebar-item:hover .order, .sidebar .sidebar-list a .sidebar-item.active .order {
             border: 2px solid white !important; }
       .sidebar .sidebar-list a.active {
-        color: blue; }
+        color: white; }
   .sidebar.sticky {
     position: fixed;
     top: 20px; }
@@ -292,7 +288,7 @@ body {
     margin-left: 20px; }
     .sidebar .button-group .button {
       -webkit-font-smoothing: antialiased;
-      background-color: black;
+      background-color: blue;
       border-radius: 0;
       width: 35px;
       height: 35px;
@@ -301,9 +297,11 @@ body {
       line-height: 25px;
       display: inline-block;
       text-align: center;
-      box-shadow: 1px 0px 0px #4d4d4d, 0px 1px 0px #333333, 2px 1px 0px #4d4d4d, 1px 2px 0px #333333, 3px 2px 0px #4d4d4d, 2px 3px 0px #333333, 4px 3px 0px #4d4d4d, 3px 4px 0px #333333, 5px 4px 0px #4d4d4d, 4px 5px 0px #333333, 6px 5px 0px #4d4d4d, 5px 6px 0px #333333, 7px 6px 0px #4d4d4d, 6px 7px 0px #333333, 8px 7px 0px #4d4d4d, 7px 8px 0px #333333, 9px 8px 0px #4d4d4d, 8px 9px 0px #333333;
+      box-shadow: 1px 0px 0px #000000, 0px 1px 0px #000000, 2px 1px 0px #000000, 1px 2px 0px #000000, 3px 2px 0px #000000, 2px 3px 0px #000000, 4px 3px 0px #000000, 3px 4px 0px #000000, 5px 4px 0px #000000, 4px 5px 0px #000000, 6px 5px 0px #000000, 5px 6px 0px #000000, 7px 6px 0px #000000, 6px 7px 0px #000000, 8px 7px 0px #000000, 7px 8px 0px #000000, 9px 8px 0px #000000, 8px 9px 0px #000000;
       -webkit-transition: all .2s linear;
               transition: all .2s linear; }
+      .sidebar .button-group .button:first-child {
+        margin-right: 10px; }
       .sidebar .button-group .button a {
         color: white; }
       .sidebar .button-group .button i {
