--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -20,6 +20,7 @@ body{
 	height: 100%;
 	min-width: 320px;
 	min-height: 100%;
+	color: blue;
 	-webkit-font-smoothing: antialiased;
 	-webkit-tap-highlight-color: transparent;
 	-webkit-overflow-scrolling: touch;
@@ -90,7 +91,7 @@ body{
 	@include vendorize(transition, opacity 0.3s);
 	.rbma-radio-picks{
 		font-size: 2em;
-		border-bottom: 5px solid black;
+		border-bottom: 5px solid blue;
 		width: 100%;
 		margin-left: 10%;
 		&:after{
@@ -124,7 +125,7 @@ body{
 				z-index: 1;
 
 				.img-container{
-					border: 5px solid black;
+					border: 5px solid blue;
 					overflow: hidden !important;
 					width: 150px;
 					height: 150px;
@@ -143,11 +144,11 @@ body{
 						right: 10px;
 						font-size: 0.75em;
 						font-weight: bold;
-						border: 2px solid black;
+						border: 2px solid blue;
 						width: 15px;
 						height: 15px;
 						line-height: 15px;
-						color: black !important;
+						color: blue !important;
 					}
 					img{
 						height: 100%;
@@ -194,16 +195,16 @@ body{
 				height: auto;
 				width: 100%;
 				.list-titles{
-					border-bottom: 5px solid black;
+					border-bottom: 5px solid blue;
 					margin: 0;
 					.item-order{
-						font-size: 0.7em;
+						font-size: 0.5em;
 						display: inline-block;
 						text-align: center;
 						width: 20px;
 						line-height: 20px;
 						height: 20px;
-						border: 2px solid black;
+						border: 2px solid blue;
 						@include vendorize(border-radius, 50%);
 					}
 					.item-title{
@@ -255,11 +256,11 @@ body{
 		position: absolute;
 		top: 250px;
 		left: 10px;
-		width: 17.3333333333%;
+		width: 17.0000003333%;
 		text-align: left;
 		a.topscroll{
 			text-decoration: none;
-			color: black;
+			color: blue;
 		}
 		h4{
 			margin: 0;
@@ -291,7 +292,7 @@ body{
 					padding: 5px;
 					margin: 0;
 					background-color: transparent;
-					color: black !important;
+					color: blue !important;
 					.order{
 						width: 15px;
 						display: inline-block;
@@ -300,26 +301,19 @@ body{
 						text-align: center;
 						line-height: 15px;
 						height: 15px;
-						border: 2px solid black;
+						border: 2px solid blue;
 						@include vendorize(border-radius, 50%);
 					}
-					&:hover{
-						background-color: black;
+					&:hover, &.active{
+						background-color: blue;
 						color: white !important;
 						.order{
 							border: 2px solid white !important; 
 						}
 					}
-					&.active{
-						background-color: black;
-						color: white !important;
-						.order{
-							border: 2px solid white !important;
-						}
-					}
 				}
 				&.active{
-					color: blue;
+					color: white;
 				}
 			}
 		}
@@ -333,7 +327,7 @@ body{
 			margin-left: 20px;
 			.button{
 				-webkit-font-smoothing: antialiased;
-				background-color: black;
+				background-color: blue;
 				border-radius: 0;
 				width: 35px;
 				height: 35px;
@@ -342,8 +336,11 @@ body{
 				line-height: 25px;
 				display: inline-block;
 				text-align: center;
-				box-shadow: 1px 0px 0px #4d4d4d, 0px 1px 0px #333333, 2px 1px 0px #4d4d4d, 1px 2px 0px #333333, 3px 2px 0px #4d4d4d, 2px 3px 0px #333333, 4px 3px 0px #4d4d4d, 3px 4px 0px #333333, 5px 4px 0px #4d4d4d, 4px 5px 0px #333333, 6px 5px 0px #4d4d4d, 5px 6px 0px #333333, 7px 6px 0px #4d4d4d, 6px 7px 0px #333333, 8px 7px 0px #4d4d4d, 7px 8px 0px #333333, 9px 8px 0px #4d4d4d, 8px 9px 0px #333333;
+				box-shadow: 1px 0px 0px #000000, 0px 1px 0px #000000, 2px 1px 0px #000000, 1px 2px 0px #000000, 3px 2px 0px #000000, 2px 3px 0px #000000, 4px 3px 0px #000000, 3px 4px 0px #000000, 5px 4px 0px #000000, 4px 5px 0px #000000, 6px 5px 0px #000000, 5px 6px 0px #000000, 7px 6px 0px #000000, 6px 7px 0px #000000, 8px 7px 0px #000000, 7px 8px 0px #000000, 9px 8px 0px #000000, 8px 9px 0px #000000;
 				transition: all .2s linear;
+				&:first-child{
+					margin-right: 10px;
+				}
 				a{
 					color: white;
 				}
