--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -94,8 +94,10 @@ body{
 		border-bottom: 5px solid blue;
 		width: 100%;
 		margin-left: 10%;
-		&:after{
-			content: 'RBMA Radio Picks';
+		.title{
+			// margin-left: 10%;
+			margin: 0;
+			padding: 0;
 		}
 	}
 	.author{
@@ -108,7 +110,7 @@ body{
 		list-style-type: none;
 		padding: none;
 		padding-right: 100px;
-		margin-left: 15%;
+		margin-left: 20%;
 		text-align: center;
 		z-index: 1;
 		margin-top: 68px;
@@ -254,7 +256,7 @@ body{
 
 .sidebar{
 		position: absolute;
-		top: 250px;
+		top: 280px;
 		left: 10px;
 		width: 17.0000003333%;
 		text-align: left;
@@ -266,7 +268,7 @@ body{
 			margin: 0;
 		}
 		img{
-			max-width: 50%;
+			max-width: 80%;
 			height: auto;
 			margin-left: 0;
 			margin-left: 20px;
@@ -291,13 +293,15 @@ body{
 				.sidebar-item{
 					padding: 5px;
 					margin: 0;
+					font-size: 0.8em;
 					background-color: transparent;
 					color: blue !important;
+					width: 80%;
 					.order{
 						width: 15px;
 						display: inline-block;
 						margin-right: 5px;
-						font-size: 0.75em;
+						font-size: 0.7em;
 						text-align: center;
 						line-height: 15px;
 						height: 15px;
