--- a/partials/detail.jade
+++ b/partials/detail.jade
@@ -7,8 +7,7 @@ div(id="spinner")
 		
 
 		.rbma-radio-picks
-		
-
+			h1(class="title") {{list.fields.parentTitle}}
 		h1(class="author") {{list.fields.author}}
 
 		ul(class="list-thumbs")
