--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -276,7 +276,7 @@ body{
 		.radio-picks-sidebar{
 			margin-left: 20px;
 			&:after{
-				content: 'RBMA Radio Picks'
+				content: ''
 			}
 		}
 		.author-sidebar{
