--- a/partials/detail.jade
+++ b/partials/detail.jade
@@ -67,7 +67,7 @@ div(id="spinner")
 				
 				img(ng-src="{{list.fields.authorImage.fields.file.url}}")
 				
-				h4(class="radio-picks-sidebar")
+				h4(class="radio-picks-sidebar") {{list.fields.parentTitle}}
 				
 				h4(class="author-sidebar") {{list.fields.author}}
 				
