--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -30,7 +30,7 @@ body {
   height: 100%;
   min-width: 320px;
   min-height: 100%;
-  color: blue;
+  color: black;
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: transparent;
   -webkit-overflow-scrolling: touch; }
@@ -89,7 +89,7 @@ body {
   transition: opacity 0.3s; }
   .list-wrapper .rbma-radio-picks {
     font-size: 2em;
-    border-bottom: 5px solid blue;
+    border-bottom: 5px solid black;
     width: 100%;
     margin-left: 10%; }
     .list-wrapper .rbma-radio-picks .title {
@@ -119,7 +119,7 @@ body {
         height: 225px;
         z-index: 1; }
         .list-wrapper .list-thumbs li .thumb-container .img-container {
-          border: 5px solid blue;
+          border: 5px solid black;
           overflow: hidden !important;
           width: 150px;
           height: 150px;
@@ -142,11 +142,11 @@ body {
             right: 10px;
             font-size: 0.75em;
             font-weight: bold;
-            border: 2px solid blue;
+            border: 2px solid black;
             width: 15px;
             height: 15px;
             line-height: 15px;
-            color: blue !important; }
+            color: black !important; }
           .list-wrapper .list-thumbs li .thumb-container .img-container img {
             height: 100%;
             width: 100%;
@@ -184,7 +184,7 @@ body {
         height: auto;
         width: 100%; }
         .list-wrapper .list-items .list-item .list-container .list-titles {
-          border-bottom: 5px solid blue;
+          border-bottom: 5px solid black;
           margin: 0; }
           .list-wrapper .list-items .list-item .list-container .list-titles .item-order {
             font-size: 0.5em;
@@ -193,7 +193,7 @@ body {
             width: 20px;
             line-height: 20px;
             height: 20px;
-            border: 2px solid blue;
+            border: 2px solid black;
             -o-border-radius: 50%;
             border-radius: 50%; }
           .list-wrapper .list-items .list-item .list-container .list-titles .item-title {
@@ -235,7 +235,7 @@ body {
   text-align: left; }
   .sidebar a.topscroll {
     text-decoration: none;
-    color: blue; }
+    color: black; }
   .sidebar h4 {
     margin: 0; }
   .sidebar img {
@@ -262,7 +262,7 @@ body {
         margin: 0;
         font-size: 0.8em;
         background-color: transparent;
-        color: blue !important;
+        color: black !important;
         width: 80%; }
         .sidebar .sidebar-list a .sidebar-item .order {
           width: 15px;
@@ -272,11 +272,11 @@ body {
           text-align: center;
           line-height: 15px;
           height: 15px;
-          border: 2px solid blue;
+          border: 2px solid black;
           -o-border-radius: 50%;
           border-radius: 50%; }
         .sidebar .sidebar-list a .sidebar-item:hover, .sidebar .sidebar-list a .sidebar-item.active {
-          background-color: blue;
+          background-color: black;
           color: white !important; }
           .sidebar .sidebar-list a .sidebar-item:hover .order, .sidebar .sidebar-list a .sidebar-item.active .order {
             border: 2px solid white !important; }
@@ -291,7 +291,7 @@ body {
     margin-left: 20px; }
     .sidebar .button-group .button {
       -webkit-font-smoothing: antialiased;
-      background-color: blue;
+      background-color: black;
       border-radius: 0;
       width: 35px;
       height: 35px;
