--- a/index.jade
+++ b/index.jade
@@ -9,6 +9,7 @@ html(lang="en", ng-app="listfeature")
 
 	body(class="frame-body")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
+		//- iframe(class="navbar", src="http://edweena.github.io/rbma-navbar/", height="58px", width="100%", border="0")
 		div(ng-view)
 
 		script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
@@ -27,3 +28,4 @@ html(lang="en", ng-app="listfeature")
 		script(type="text/javascript", src="js/app.js")
 		script(type="text/javascript", src="js/controllers.js")
 		script(type="text/javascript", src="js/directives.js")
+		script(type="text/javascript", src="js/services.js")
