--- a/partials/detail.jade
+++ b/partials/detail.jade
@@ -43,7 +43,7 @@ div(id="spinner")
 					
 					.list-titles
 						
-						a(id="{{item.fields.anchorLinkTag}}" class="item-order-link" data-order="{{item.fields.order}}")
+						a(id="{{item.fields.anchorLinkTag}}", class="item-order-link", data-order="{{item.fields.order}}", add-waypoint)
 						
 						span(class="item-order") {{item.fields.order}}
 						
