--- a/partials/detail.html
+++ b/partials/detail.html
@@ -16,7 +16,7 @@
     <ul class="list-items">
       <li ng-repeat="item in list.fields.individualListItems" class="list-item">
         <div class="list-container">
-          <div class="list-titles"><a id="{{item.fields.anchorLinkTag}}" data-order="{{item.fields.order}}" class="item-order-link"></a><span class="item-order">{{item.fields.order}}</span>
+          <div class="list-titles"><a id="{{item.fields.anchorLinkTag}}" data-order="{{item.fields.order}}" add-waypoint="add-waypoint" class="item-order-link"></a><span class="item-order">{{item.fields.order}}</span>
             <h3 class="item-title">{{item.fields.title}}</h3>
           </div>
           <div class="item-body">
